Use immutable toList() for collection streams