@@ -12,7 +12,6 @@ import java.util.stream.Stream;
 
 import static java.util.Collections.reverse;
 import static java.util.Comparator.comparing;
-import static java.util.stream.Collectors.toList;
 import static java.util.stream.Collectors.toMap;
 import static java.util.stream.Stream.concat;
 import static org.synyx.urlaubsverwaltung.application.application.ApplicationStatus.WAITING;
@@ -31,7 +30,7 @@ final class OvertimeListMapper {
         Duration sum = totalOvertimeLastYear;
 
         final List<OvertimeListRecordDto> allOvertimes = orderedOvertimesAndAbsences(overtimeAbsences, overtimes, signedInUser, isUserIsAllowedToEditOvertime);
-        for (OvertimeListRecordDto overtimeEntry : allOvertimes) {
+        for (final OvertimeListRecordDto overtimeEntry : allOvertimes) {
             sum = sum.plus(overtimeEntry.getDurationByYear().getOrDefault(selectedYear, Duration.ZERO));
             overtimeListRecordDtos.add(new OvertimeListRecordDto(overtimeEntry, sum, overtimeEntry.getDurationByYear()));
         }
@@ -44,7 +43,7 @@ final class OvertimeListMapper {
     private static List<OvertimeListRecordDto> orderedOvertimesAndAbsences(List<Application> overtimeAbsences, List<Overtime> overtimes, Person signInUser, boolean isUserIsAllowedToEditOvertime) {
         return concat(byOvertimes(overtimes, isUserIsAllowedToEditOvertime), byAbsences(overtimeAbsences, signInUser))
             .sorted(comparing(OvertimeListRecordDto::getStartDate))
-            .collect(toList());
+            .toList();
     }
 
     private static Stream<OvertimeListRecordDto> byAbsences(List<Application> overtimeAbsences, Person signInUser) {
